--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^2.0.0-beta.8",
+    "ngx-owl-carousel": "^2.0.1",
     "node-sass": "^4.5.3",
     "require": "^2.4.20",
     "rxjs": "^5.1.0",
