--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/node": "~6.0.60",
     "bootstrap": "^3.3.7",
     "codelyzer": "^4.0.1",
+    "imagesloaded": "^4.1.4",
+    "isotope-layout": "^3.0.5",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "jquery": "^3.2.1",
